gccida/c3/purge_line_number_notes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:618:4: error: expected ';' after expression
rtx v2; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:618:5: error: use of undeclared identifier 'v2'
rtx v2; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:619:4: error: expected ';' after expression
rtx v3; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:619:5: error: use of undeclared identifier 'v3'
rtx v3; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:625:1: error: use of undeclared identifier 'v2'
v2 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:633:1: error: use of undeclared identifier 'v3'
v3 = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:638:1: error: use of undeclared identifier 'v3'
v3 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:639:7: error: use of undeclared identifier 'v2'
if ( !v2 ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:641:1: error: use of undeclared identifier 'v3'
v3 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:642:16: error: use of undeclared identifier 'v2'
if ( rtx[2] != v2[2] ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:644:1: error: use of undeclared identifier 'v3'
v3 = rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:645:15: error: use of undeclared identifier 'v2'
if ( rtint != v2[2].fld[0].rtint ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:650:1: error: use of undeclared identifier 'v3'
v3 = v2; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:650:6: error: use of undeclared identifier 'v2'
v3 = v2; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:653:1: error: use of undeclared identifier 'v2'
v2 = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/jump.c:653:6: error: use of undeclared identifier 'v3'
v2 = v3; 
     ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/purge_line_number_notes/src/obj/jump.o] Error 1
